2025-12-13  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp
	(non_interpreted_char_node::non_interpreted_char_node): Fix code
	style nit.  Migrate input character handling constructor to deal
	in the type `unsigned char` rather than `char`.  Use explicitly
	unsigned literal in comparison.

	Continues the long process of fixing Savannah #67735.

2025-12-13  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (process_input_stack): Fix code style
	nit.  Eliminate unnecessary brace scopes that introduces no new
	local variables in switch `case`s.

2025-12-13  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/env.cpp (environment::set_size): Fix code style
	nit.  Arrange equality comparison to avoid inadvertent lvalue
	assignment.

2025-12-13  G. Branden Robinson <g.branden.robinson@gmail.com>

	* README.git: Delete file not distributed in archives.
	* bootstrap.conf (checkout_only_file): Identify "FOR-RELEASE"
	instead of "README.git" as the indicator of a Git checkout.

	Fixes <https://savannah.gnu.org/bugs/?67787>.  Thanks to Dave
	Kemper for the report.

2025-12-12  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/utils/grog/grog.pl: Improve heuristics for distinguishing
	mm(7) documents from those for other packages.
	(interpret_line): Recognize `APP`, `APPSK`, `AF`, `AS`,
	`COVEND`, `INITI`, `IND`, `INDP`, `INITR`, `SETR`, `GETHN`,
	`GETPN`, `ISODATE`, `MULB`, `MULN`, and `MULE` as unique to mm.
	(infer_man_or_ms_package): Stop recognizing `RP`, `TL`, `AU`,
	`ND`, `AE`, `B1`, `B2`, `DS`, `DE`, `1C`, `2C`, and `MC` as
	unique to ms, since mm also defines them.  Stop recognizing `P`
	and `EX` as unique to man, since mm also defines them.
	* src/utils/grog/tests/smoke-test.sh: Add most mm examples as
	test cases.  A couple are deeply ambiguous, like "B1B2", which
	is so limited that it is valid (and renders sensibly) with